<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/digits"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="248dp"
        android:background="@color/background"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:maxLength="12"
        android:textSize="48sp"
        android:textColor="@color/btnColor"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="580dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_orange_selector"
            android:onClick="onClear"
            android:text="@string/btnClearAll"
            android:textAlignment="center"
            android:textColor="@color/btnColor"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_grey_selector"
            android:onClick="onDigit"
            android:text="@string/btnZero"
            android:textAlignment="center"
            android:textColor="@color/btnColorText"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_orange_selector"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textAlignment="center"
            android:textColor="@color/btnColor"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:layout_width="116dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_orange_selector"
            android:onClick="onOperator"
            android:text="@string/sub"
            android:textAlignment="center"
            android:textColor="@color/btnColor"
            android:textSize="40sp"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="508dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_grey_selector"
            android:onClick="onDigit"
            android:text="@string/btnOne"
            android:textAlignment="center"
            android:textColor="@color/btnColorText"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_grey_selector"
            android:onClick="onDigit"
            android:text="@string/btnTwo"
            android:textAlignment="center"
            android:textColor="@color/btnColorText"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_grey_selector"
            android:onClick="onDigit"
            android:text="@string/btnThree"
            android:textAlignment="center"
            android:textColor="@color/btnColorText"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:layout_width="116dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_orange_selector"
            android:onClick="onOperator"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="@color/btnColor"
            android:textSize="40sp"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="436dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_grey_selector"
            android:onClick="onDigit"
            android:text="@string/btnFour"
            android:textAlignment="center"
            android:textColor="@color/btnColorText"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_grey_selector"
            android:onClick="onDigit"
            android:text="@string/btnFive"
            android:textAlignment="center"
            android:textColor="@color/btnColorText"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_grey_selector"
            android:onClick="onDigit"
            android:text="@string/btnSix"
            android:textAlignment="center"
            android:textColor="@color/btnColorText"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:layout_width="116dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_orange_selector"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textAlignment="center"
            android:textColor="@color/btnColor"
            android:textSize="40sp"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="364dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_grey_selector"
            android:onClick="onDigit"
            android:text="@string/btnSeven"
            android:textAlignment="center"
            android:textColor="@color/btnColorText"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_grey_selector"
            android:onClick="onDigit"
            android:text="@string/btnEight"
            android:textAlignment="center"
            android:textColor="@color/btnColorText"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_grey_selector"
            android:onClick="onDigit"
            android:text="@string/btnNine"
            android:textAlignment="center"
            android:textColor="@color/btnColorText"
            android:textSize="40sp"
            android:typeface="monospace" />

        <Button
            android:layout_width="116dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_orange_selector"
            android:onClick="onOperator"
            android:text="@string/multi"
            android:textAlignment="center"
            android:textColor="@color/btnColor"
            android:textSize="40sp"
            android:typeface="monospace" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>